ci: rodar os teste no repositorio da implementação

--- a/.github/workflows/nodejs-ci.yml
+++ b/.github/workflows/nodejs-ci.yml
@@ -3,7 +3,7 @@ name: Rodar os testes de integrações
 on:
   push:
     branches:
-      - master
+      - mongodb-memory-server
   pull_request:
     branches:
       - master
